--- a/booklet.html
+++ b/booklet.html
@@ -49,6 +49,11 @@
 <!-- HEADER -->
 		<header id="header" class="">
 			<a id="an-backtotop" class="lg-black" href="index.html" onclick="$('#top').animatescroll();"></a>
+			<div class="sub-scroll-menu">
+				<h4 class="item"><a onclick="$('#news').animatescroll();">NEWS</a></h4>
+				<h4 class="item"><a onclick="$('#must-read').animatescroll();">MUST READ</a></h4>
+				<h4 class="item"><a onclick="$('#info').animatescroll();">INFO</a></h4>
+			</div>
 			<a href="#nav" id="header-nav"></a>
 		</header>
 
