--- a/artists.html
+++ b/artists.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" href="assets/css/fonts.css" />
 		<link rel="stylesheet" href="assets/css/animate.min.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		
+		<link rel="stylesheet" href="assets/css/styles.css" />
 		<style type="text/css">
 			.no-js #loader { display: none;  }
 			.js #loader { display: block; position: absolute; left: 100px; top: 0; }
