--- a/booklet.html
+++ b/booklet.html
@@ -91,7 +91,7 @@
 
 			<div class="carousel-booklet">
 
-				<div class="sub-scroll-menu">
+				<!-- <div class="sub-scroll-menu">
 					<h4 class="item"><a onclick="$('#news').animatescroll();">NEWS</a></h4>
 					<h4 class="item"><a onclick="$('#must-read').animatescroll();">MUST READ</a></h4>
 					<h4 class="item"><a onclick="$('#info').animatescroll();">INFO</a></h4>
@@ -99,7 +99,7 @@
 
 				<div class="static-banner-logo">
 					<div class="lg-black"></div>
-				</div>
+				</div> -->
 
 				<div class="carousel-cell" data-flickity-bg-lazyload="images/4.jpg">
 					<div class="banner-center-title">
@@ -350,21 +350,22 @@
 <!-- LOCATIONS -->
 		<section class="panel locations" id="info">
 			<h2 class="block-title 12u$">LOCATIONS</h2>
-			<div class="buttons">
+			<!-- <div class="buttons">
 				<div class="item map active" data-id="map-block"></div>
 				<div class="item list" data-id="list-block"></div>
-			</div>
+			</div> -->
 
 			<div class="holder">
-				<div id="map-block" class="locations-type">
+				<!-- <div id="map-block" class="locations-type">
 					<div class="cities">
 						<a href="#" class="city spb active"><h4>SAINT PETERSBURG</h4></a>
 						<a href="#" class="city msk"><h4>MOSCOW</h4></a>
 					</div>
 					<div id="map-spb" class="map-item"></div>
 					<div id="map-msk"  class="map-item" style="display: none;"></div>
-				</div>
-				<div id="list-block" class="locations-type" style="display: none;">
+				</div> -->
+				<!-- <div id="list-block" class="locations-type" style="display: none;"> -->
+				<div id="list-block" class="locations-type">
 					<div class="column">
 						<h4 class="top-headline">САНКТ-ПЕТЕРБУРГ</h4>
 						<h4 class="headline">Рестораны:</h4>
