Правки, добавление скролл-спай

--- a/booklet.html
+++ b/booklet.html
@@ -50,9 +50,9 @@
 		<header id="header" class="">
 			<a id="an-backtotop" class="lg-black" href="index.html" onclick="$('#top').animatescroll();"></a>
 			<div class="sub-scroll-menu">
-				<h4 class="item"><a onclick="$('#news').animatescroll();">NEWS</a></h4>
-				<h4 class="item"><a onclick="$('#must-read').animatescroll();">MUST READ</a></h4>
-				<h4 class="item"><a onclick="$('#info').animatescroll();">INFO</a></h4>
+				<h4 class="item"><a href="#news" onclick="$('#news').animatescroll();">NEWS</a></h4>
+				<h4 class="item"><a href="#must-read" onclick="$('#must-read').animatescroll();">MUST READ</a></h4>
+				<h4 class="item"><a href="#info" onclick="$('#info').animatescroll();">INFO</a></h4>
 			</div>
 			<a href="#nav" id="header-nav"></a>
 		</header>
@@ -91,13 +91,13 @@
 
 			<div class="carousel-booklet">
 
-				<!-- <div class="sub-scroll-menu">
+				<div class="sub-scroll-menu">
 					<h4 class="item"><a onclick="$('#news').animatescroll();">NEWS</a></h4>
 					<h4 class="item"><a onclick="$('#must-read').animatescroll();">MUST READ</a></h4>
 					<h4 class="item"><a onclick="$('#info').animatescroll();">INFO</a></h4>
 				</div>
 
-				<div class="static-banner-logo">
+				<!-- <div class="static-banner-logo">
 					<div class="lg-black"></div>
 				</div> -->
 
@@ -541,6 +541,9 @@
 
 		<!-- Google maps -->
 		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+		<!-- Scrollspy -->
+		<script src="assets/js/scrollspy.js"></script>
 
 		<!-- New scripts -->
 		<script src="assets/js/scripts.js"></script>
