правки хеддер-футтер

--- a/booklet.html
+++ b/booklet.html
@@ -91,11 +91,11 @@
 
 			<div class="carousel-booklet">
 
-				<div class="sub-scroll-menu">
+				<!-- <div class="sub-scroll-menu">
 					<h4 class="item"><a onclick="$('#news').animatescroll();">NEWS</a></h4>
 					<h4 class="item"><a onclick="$('#must-read').animatescroll();">MUST READ</a></h4>
 					<h4 class="item"><a onclick="$('#info').animatescroll();">INFO</a></h4>
-				</div>
+				</div> -->
 
 				<!-- <div class="static-banner-logo">
 					<div class="lg-black"></div>
