--- a/booklet.html
+++ b/booklet.html
@@ -67,7 +67,7 @@
 					<li><a href="news.html">NEWS</a></li>
 					<li><a>ART FAIRS</a></li>
 					<li><a>PROJECTS</a></li>
-					<li><a>BOOKLET</a></li>
+					<li><a href="booklet.html">BOOKLET</a></li>
 					<li><a>28 BUGS SHOP</a></li>
 					<li><a>ABOUT</a></li>
 					<li id="lang"><a></a></li>
@@ -106,10 +106,10 @@
 						<h2>BOOKLET</h2>
 						<h2 class="small-label">the magazine of Anna Nova gallery</h2>
 					</div>
-					<div class="banner-title">
+					<!-- <div class="banner-title">
 						<h2><a href="">Issue #7</a></h2>
 						<h2 class="banner-subtitle">MAIN ARTIST: ALJOSCHA</h2>
-					</div>
+					</div> -->
 					<div class="mask-cursor-left"></div>
 					<div class="mask-cursor-right"></div>
 					<!-- <div class="banner-mask"></div> -->
@@ -282,7 +282,7 @@
 
 <!-- MUST READ -->
 		<section class="panel mustread row 0%" id="must-read">
-			<h2 class="block-title 12u$">MUST READ</h2>
+			<!-- <h2 class="block-title 12u$">MUST READ</h2> -->
 			<div class="holder row">
 				<div class="3u 4u(small) 12u(xsmall) item">
 					<a href="#" class="image">
@@ -349,7 +349,7 @@
 
 <!-- LOCATIONS -->
 		<section class="panel locations" id="info">
-			<h2 class="block-title 12u$">LOCATIONS</h2>
+			<!-- <h2 class="block-title 12u$">LOCATIONS</h2> -->
 			<!-- <div class="buttons">
 				<div class="item map active" data-id="map-block"></div>
 				<div class="item list" data-id="list-block"></div>
