--- a/news.html
+++ b/news.html
@@ -62,7 +62,7 @@
 					<li><a href="news.html">NEWS</a></li>
 					<li><a>ART FAIRS</a></li>
 					<li><a>PROJECTS</a></li>
-					<li><a>BOOKLET</a></li>
+					<li><a href="booklet.html">BOOKLET</a></li>
 					<li><a>28 BUGS SHOP</a></li>
 					<li><a>ABOUT</a></li>
 					<li id="lang"><a></a></li>
