--- a/booklet.html
+++ b/booklet.html
@@ -50,12 +50,9 @@
 		<header id="header" class="">
 			<a id="an-backtotop" class="lg-black" href="index.html" onclick="$('#top').animatescroll();"></a>
 			<div class="sub-scroll-menu">
-				<!-- <h4 class="item"><a href="#news" onclick="$('#news').animatescroll();">NEWS</a></h4>
+				<h4 class="item"><a href="#news" onclick="$('#news').animatescroll();">NEWS</a></h4>
 				<h4 class="item"><a href="#must-read" onclick="$('#must-read').animatescroll();">MUST READ</a></h4>
-				<h4 class="item"><a href="#info" onclick="$('#info').animatescroll();">INFO</a></h4> -->
-				<h4 class="item"><a href="#news">NEWS</a></h4>
-				<h4 class="item"><a href="#must-read">MUST READ</a></h4>
-				<h4 class="item"><a href="#info">INFO</a></h4>
+				<h4 class="item"><a href="#info" onclick="$('#info').animatescroll();">INFO</a></h4>
 			</div>
 			<a href="#nav" id="header-nav"></a>
 		</header>
