правки буклета и баннеров, добавил ссылки на главной

--- a/booklet.html
+++ b/booklet.html
@@ -50,6 +50,7 @@
 		<header id="header" class="">
 			<a id="an-backtotop" class="lg-black" href="index.html" onclick="$('#top').animatescroll();"></a>
 			<div class="sub-scroll-menu">
+				<h4 class="item"><a href="#banner" onclick=""></a></h4>
 				<h4 class="item"><a href="#news" onclick="$('#news').animatescroll();">NEWS</a></h4>
 				<h4 class="item"><a href="#must-read" onclick="$('#must-read').animatescroll();">MUST READ</a></h4>
 				<h4 class="item"><a href="#info" onclick="$('#info').animatescroll();">INFO</a></h4>
@@ -399,7 +400,7 @@
 						<div class="item">Эрмитаж</div>
 						<h4 class="headline">Spa&Beauty:</h4>
 						<div class="item">Authentica Club</div>
-						<div class="item">Bliss SpaCrystal Spa & Lounge</div>
+						<div class="item">Bliss SpaCrystal Spa &<br>Lounge</div>
 					</div>
 					<div class="column">
 						<div class="item">Neuhaus SPA & Wellness</div>
@@ -444,7 +445,7 @@
 						<div class="item">Резиденция QuartaRiata</div>
 						<div class="item">Читальный зал Aperto</div>
 						<h4 class="headline">Москва</h4>
-						<div class="item">Authentica Club/div>
+						<div class="item">Authentica Club</div>
 						<div class="item">Bulgakov Space</div>
 						<div class="item">Digital пространство и бар Kl10chБизнес-центр Cabinet Lounge</div>
 						<div class="item">Коворкинг Yellow Door</div>
