--- a/news.html
+++ b/news.html
@@ -101,7 +101,7 @@
 			<section class="panel news row 0% grid">
 				<div class="6u 12u$(xsmall) news-snip hor-image exhibition">
 					<span class="news-snip-last">LAST NEWS</span>
-					<a href="" title="Read" class="image fit">
+					<a href="news-item.html" title="Read" class="image fit">
 						<img src="images/news/1.png">
 					</a>
 					<div class="news-snip-content">
@@ -110,7 +110,7 @@
 							<li><a href="">EXHIBITION</a></li>
 							<li><a href="">EXHIBITION</a></li>
 						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+						<h4><a href="news-item.html" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 						<span class="news-snip-date">08.08.2016</span>
 					</div>
