--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<li><a href="news.html">NEWS</a></li>
 						<li><a>ART FAIRS</a></li>
 						<li><a>PROJECTS</a></li>
-						<li><a>BOOKLET</a></li>
+						<li><a href="#">BOOKLET</a></li>
 						<li><a>28 BUGS SHOP</a></li>
 						<li><a>ABOUT</a></li>
 					</ul>
