Правки баннеров и суб-меню

--- a/booklet.html
+++ b/booklet.html
@@ -415,7 +415,7 @@
 						<div class="item">DAYNIGHT</div>
 						<div class="item">Gate31</div>
 						<div class="item">JNBY</div>
-						<h4 class="headline">Mint Store</h4>
+						<div class="item">Mint Store</div>
 						<div class="item">Museum</div>
 						<div class="item">Philipp Plein</div>
 						<div class="item">Subbota showroom</div>
@@ -429,7 +429,8 @@
 						<div class="item">HOMESAN-GALLY DECOR</div>
 						<div class="item">Space Four</div>
 						<div class="item">Галерея дизайна Neuhaus</div>
-						<div class="item">Галерея интерьерного света Visual Comfort & Co</div>
+						<div class="item">Галерея интерьерного света</div>
+						<div class="item">Visual Comfort & Co</div>
 						<div class="item">Салон DECORUM</div>
 						<div class="item">Студия Братьев Жилиных</div>
 						<h4 class="headline">Другое:</h4>
@@ -447,7 +448,8 @@
 						<h4 class="headline">Москва</h4>
 						<div class="item">Authentica Club</div>
 						<div class="item">Bulgakov Space</div>
-						<div class="item">Digital пространство и бар Kl10chБизнес-центр Cabinet Lounge</div>
+						<div class="item">Digital пространство и<br>бар Kl10chБизнес-центр</div>
+						<div class="item">Cabinet Lounge</div>
 						<div class="item">Коворкинг Yellow Door</div>
 						<div class="item">Студия Nova Music</div>
 					</div>
