--- a/news-item.html
+++ b/news-item.html
@@ -107,7 +107,7 @@
 							<a href="#" class="author">Имя автора</a>
 						</div>
 					</div>
-					<div class="carousel-cell" data-flickity-bg-lazyload="images/5.png">
+					<div class="carousel-cell" data-flickity-bg-lazyload="images/small_2.jpg">
 						<div class="mask-cursor-left"></div>
 						<div class="mask-cursor-right"></div>
 						<div class="text">
