Страница автора + правки и доработки по всем страницам

--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
 					<div class="lg-white">
 						<div id="lg-desc">
 							<p>
-								<strong>Anna Nova Gallery<br>
-								of Contemporary art</strong><br>
+								<strong>Anna Nova Gallery</strong><br>
 								<a><i class="fa fa-map-marker" aria-hidden="true"></i>Zhukovskogo St., 28</a><br><br>
 								<strong>Tue - Sat</strong><br>
 								12:00 – 19:00
