--- a/news-item.html
+++ b/news-item.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="assets/css/animate.min.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 
+		<link rel="stylesheet" href="assets/css/slick.css" />
 		<link rel="stylesheet" href="assets/css/styles.css" />
 		<style type="text/css">
 			.no-js #loader { display: none;  }
@@ -97,34 +98,29 @@
 				</div>
 			</div>
 
-			<section id="banner" class="fadeIn">
-				<div class="carousel news-item-carousel">
-					<div class="carousel-cell" data-flickity-bg-lazyload="images/5.png">
-						<div class="mask-cursor-left"></div>
-						<div class="mask-cursor-right"></div>
-						<div class="text">
-							<div class="name">Название</div>
-							<a href="#" class="author">Имя автора</a>
-						</div>
-					</div>
-					<div class="carousel-cell" data-flickity-bg-lazyload="images/small_2.jpg">
-						<div class="mask-cursor-left"></div>
-						<div class="mask-cursor-right"></div>
-						<div class="text">
-							<div class="name">Название</div>
-							<a href="#" class="author">Имя автора</a>
-						</div>
-					</div>
-					<div class="carousel-cell" data-flickity-bg-lazyload="images/5.png">
-						<div class="mask-cursor-left"></div>
-						<div class="mask-cursor-right"></div>
-						<div class="text">
-							<div class="name">Название</div>
-							<a href="#" class="author">Имя автора</a>
-						</div>
+			<div class="author-gal">
+				<div class="item">
+					<div class="holder">
+						<img src="images/5.png">
+						<div class="name">Название</div>
+						<a class="author">Автор</a>
 					</div>
 				</div>
-			</section>
+				<div class="item">
+					<div class="holder">
+						<img src="images/6.jpg">
+						<div class="name">Название</div>
+						<a class="author">Автор</a>
+					</div>
+				</div>
+				<div class="item">
+					<div class="holder">
+						<img src="images/small_2.jpg">
+						<div class="name">Название</div>
+						<a class="author">Автор</a>
+					</div>
+				</div>
+			</div>
 
 			<div class="row 0% main-text">
 				<div class="4u 6u(large) 8u(small) 12u$(xsmall) holder">
@@ -156,7 +152,7 @@
 				</div>
 				<div class="item">
 					<div class="img">
-						<img src="images/news item/2.jpg">
+						<iframe src="https://player.vimeo.com/video/215666233" width="620" height="320" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 					</div>
 					<div class="text-snip">
 						<div class="name">Название</div>
@@ -302,8 +298,14 @@
 		<!-- WOWJS -->
 		<script src="assets/js/wowjs/wow.min.js"></script>
 
+		<!-- SLICK -->
+		<script src="assets/js/slick/slick.js"></script>
+
 		<!-- MAINJS -->
 		<script src="assets/js/main.js"></script>
+
+		<!-- SCRIPTS -->
+		<script src="assets/js/scripts.js"></script>
 
 	</body>
 </html>
