--- a/author.html
+++ b/author.html
@@ -185,6 +185,8 @@
 				</div>
 			</section>
 
+		</div>
+
 <!-- PROJECTS -->
 			<section class="b-projects" id="projects">
 				<div class="project-item">
@@ -219,10 +221,9 @@
 						<div class="item">
 							<img src="images/author/7.jpg">
 						</div>
-						<a href="#" class="item last"></a>
+						<a href="#" class="last"></a>
 					</div>
 				</div>	
-
 				<div class="project-item">
 					<div class="type">Group Project</div>
 					<div class="mobile-headline">
@@ -243,7 +244,6 @@
 						<a href="#" class="item last"></a>
 					</div>
 				</div>
-
 				<div class="project-item">
 					<div class="type">Project</div>
 					<div class="mobile-headline">
@@ -279,7 +279,6 @@
 						<a href="#" class="item last"></a>
 					</div>
 				</div>
-
 				<div class="project-item">
 					<div class="type">Group Project</div>
 					<div class="mobile-headline">
@@ -309,8 +308,9 @@
 			</section>
 			<hr class="trans" />
 
+		<div id="main" class="container">
 <!-- NEWS -->
-			<div class="12u$" id="news">
+			<div class="12u$">
 				<!-- NEWS-TAGS -->
 				<ul class="news-tags">
 					<li><a class="active" data-filter="*">ALL</a></li>
@@ -321,7 +321,7 @@
 				</ul>
 			</div>
 
-			<section class="panel news row 0% third-grid grid">
+			<section class="panel news row 0% third-grid grid" id="news">
 				<div class="4u 6u(small) 12u$(xsmall) news-snip exhibition">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/7.png">
