переработка must read, доработки страниц буклета и страницы новости, адаптивная сетка новостей/статей

--- a/booklet.html
+++ b/booklet.html
@@ -51,7 +51,7 @@
 			<a id="an-backtotop" class="lg-black" href="index.html" onclick="$('#top').animatescroll();"></a>
 			<div class="sub-scroll-menu">
 				<h4 class="item"><a href="#banner" onclick=""></a></h4>
-				<h4 class="item"><a href="#news" onclick="$('#news').animatescroll();">NEWS</a></h4>
+				<h4 class="item"><a href="#news" onclick="$('#news').animatescroll();">ARTICLES</a></h4>
 				<h4 class="item"><a href="#must-read" onclick="$('#must-read').animatescroll();">MUST READ</a></h4>
 				<h4 class="item"><a href="#info" onclick="$('#info').animatescroll();">INFO</a></h4>
 			</div>
@@ -143,114 +143,114 @@
 
 <!-- NEWS -->
 			<hr class="trans" />
-			<section class="panel news row 0% third-grid" id="news">
-				<div class="4u 6u(small) 12u$(xsmall) news-snip wow fadeIn" data-wow-delay="0.75s">
+			<section class="panel news salvattore" id="news" data-columns>
+				<div class="item wow fadeIn" data-wow-delay="0.75s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/7.png">
 					</a>
 					<div class="news-snip-content">
 						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
 						</ul>
 						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="4u 6u$(small) 12u$(xsmall) hor-image news-snip wow fadeIn" data-wow-delay="0.5s">
+				<div class="item wow fadeIn" data-wow-delay="0.5s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/1.png">
 					</a>
 					<div class="news-snip-content">
 						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
 						</ul>
 						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="4u$ 6u(small) 12u$(xsmall) news-snip wow fadeIn" data-wow-delay="0.25s">
+				<div class="item wow fadeIn" data-wow-delay="0.25s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/2.png">
 					</a>
 					<div class="news-snip-content">
 						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
 						</ul>
 						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="4u 6u$(small) 12u$(xsmall) hor-image news-snip wow fadeIn" data-wow-delay="0.25s">
+				<div class="item wow fadeIn" data-wow-delay="0.25s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/6.png">
 					</a>
 					<div class="news-snip-content">
 						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
 						</ul>
 						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="4u 6u(small) 12u$(xsmall) news-snip wow fadeIn" data-wow-delay="0.5s">
+				<div class="item wow fadeIn" data-wow-delay="0.5s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/3.png">
 					</a>
 					<div class="news-snip-content">
 						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
 						</ul>
 						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="4u$ 6u$(small) 12u$(xsmall) hor-image news-snip wow fadeIn" data-wow-delay="0.75s">
+				<div class="item wow fadeIn" data-wow-delay="0.75s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/9.png">
 					</a>
 					<div class="news-snip-content">
 						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
 						</ul>
 						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="4u 6u(small) 12u$(xsmall) news-snip wow fadeIn" data-wow-delay="0.25s">
+				<div class="item wow fadeIn" data-wow-delay="0.25s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/2.png">
 					</a>
 					<div class="news-snip-content">
 						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
 						</ul>
 						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="4u 6u$(small) 12u$(xsmall) hor-image news-snip wow fadeIn" data-wow-delay="0.5s">
+				<div class="item wow fadeIn" data-wow-delay="0.5s">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/1.png">
 					</a>
 					<div class="news-snip-content">
 						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
+							<li>EXHIBITION</li>
 						</ul>
 						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
@@ -281,11 +281,36 @@
 			</section>
 			<hr class="trans" />
 
+<!-- DESCRIPTION -->
+		<section class="panel description">
+			<div class="text">
+				Booklet is a biannual contemporary art magazine based  in Saint-Petersburg. A project of the Anna Nova Gallery,  the magazine creates a unique cultural space for collectors  and art lovers to learn about exhibitions, events and artists.  Each issue focuses on one artist of our gallery, promoting  their ideas and aesthetic vision.  © BOOKLET
+			</div>
+			<div class="copy">© BOOKLET</div>
+		</section>
+
+<!-- DOWNLOAD -->
+		<section class="panel download">
+			<h4 class="item">
+				<a href="#" target="_blank">
+					<div class="text">DOANLOAD PDF <i class="fa fa-arrow-down" aria-hidden="true"></i></div>
+					<div class="label">MEDIA KIT</div>
+				</a>
+			</h4>
+
+			<h4 class="item">
+				<a href="#" target="_blank">
+					<div class="text">DOANLOAD PDF <i class="fa fa-arrow-down" aria-hidden="true"></i></div>
+					<div class="label">TECHNICAL<br>REQUIREMENTS</div>
+				</a>
+			</h4>
+		</section>
+
 <!-- MUST READ -->
-		<section class="panel mustread row 0%" id="must-read">
+		<section class="panel mustread" id="must-read">
 			<!-- <h2 class="block-title 12u$">MUST READ</h2> -->
-			<div class="holder row">
-				<div class="3u 4u(small) 12u(xsmall) item">
+			<div class="holder mustread-carousel">
+				<div class="item">
 					<a href="#" class="image">
 						<img src="images/mustread/booklet1.png">
 					</a>
@@ -295,7 +320,7 @@
 					</h4>
 					<div class="season">AUTUMN / WINTER 2017</div>
 				</div>
-				<div class="3u 4u(small) 12u(xsmall) item">
+				<div class="item">
 					<a href="#" class="image">
 						<img src="images/mustread/booklet1.png">
 					</a>
@@ -305,7 +330,7 @@
 					</h4>
 					<div class="season">AUTUMN / WINTER 2017</div>
 				</div>
-				<div class="3u 4u(small) 12u(xsmall) item">
+				<div class="item">
 					<a href="#" class="image">
 						<img src="images/mustread/booklet1.png">
 					</a>
@@ -315,7 +340,7 @@
 					</h4>
 					<div class="season">AUTUMN / WINTER 2017</div>
 				</div>
-				<div class="3u 4u(small) 12u(xsmall) item">
+				<div class="item">
 					<a href="#" class="image">
 						<img src="images/mustread/booklet1.png">
 					</a>
@@ -325,17 +350,7 @@
 					</h4>
 					<div class="season">AUTUMN / WINTER 2017</div>
 				</div>
-				<div class="3u 4u(small) 12u(xsmall) item">
-					<a href="#" class="image">
-						<img src="images/mustread/booklet1.png">
-					</a>
-					<div class="issue">Issue #7</div>
-					<h4 class="name">
-						<a href="#">BOOKLET</a>
-					</h4>
-					<div class="season">AUTUMN / WINTER 2017</div>
-				</div>
-				<div class="3u 4u(small) 12u(xsmall) item">
+				<div class="item">
 					<a href="#" class="image">
 						<img src="images/mustread/booklet1.png">
 					</a>
@@ -457,23 +472,6 @@
 			</div>
 		</section>
 
-<!-- DOWNLOAD -->
-		<section class="panel download">
-			<h4 class="item">
-				<a href="#" target="_blank">
-					<div class="text">DOANLOAD PDF <i class="fa fa-arrow-down" aria-hidden="true"></i></div>
-					<div class="label">MEDIA KIT</div>
-				</a>
-			</h4>
-
-			<h4 class="item">
-				<a href="#" target="_blank">
-					<div class="text">DOANLOAD PDF <i class="fa fa-arrow-down" aria-hidden="true"></i></div>
-					<div class="label">TECHNICAL<br>REQUIREMENTS</div>
-				</a>
-			</h4>
-		</section>
-
 
 		</div>
 
@@ -541,6 +539,12 @@
 
 		<!-- MAINJS -->
 		<script src="assets/js/main.js"></script>
+
+		<!-- SLICK -->
+		<script src="assets/js/slick/slick.js"></script>
+
+		<!-- SALVATORE -->
+		<script src="assets/js/salvattore/salvattore.js"></script>
 
 		<!-- Scrollspy -->
 		<script src="assets/js/scrollspy.js"></script>
