--- a/news-item.html
+++ b/news-item.html
@@ -111,29 +111,30 @@
 				</div>
 			</div>
 
+		</div>
+
+
+		<div class="news-item">
 			<div class="author-gal">
 				<div class="item">
 					<div class="holder">
-						<img src="images/5.png">
-						<div class="name">Название</div>
-						<a class="author">Автор</a>
+						<img src="images/6.jpg">
 					</div>
 				</div>
 				<div class="item">
 					<div class="holder">
-						<img src="images/6.jpg">
-						<div class="name">Название</div>
-						<a class="author">Автор</a>
+						<img src="images/5.png">
 					</div>
 				</div>
 				<div class="item">
 					<div class="holder">
 						<img src="images/small_2.jpg">
-						<div class="name">Название</div>
-						<a class="author">Автор</a>
 					</div>
 				</div>
 			</div>
+		</div>
+
+		<div class="container news-item">
 
 			<div class="main-text">
 				<div class="holder">
@@ -160,7 +161,6 @@
 					</div>
 					<div class="text-snip">
 						<div class="name">Название</div>
-						<a href="#" class="author">Автор</a>
 					</div>
 				</div>
 				<div class="item video">
@@ -169,7 +169,6 @@
 					</div>
 					<div class="text-snip">
 						<div class="name">Название</div>
-						<a href="#" class="author">Автор</a>
 					</div>
 				</div>
 			</div>
