правки буклета и страницы новости

--- a/booklet.html
+++ b/booklet.html
@@ -439,7 +439,7 @@
 							</div>
 						</div>
 
-						<h4 class="headline">МОСКВА:</h4>
+						<h4 class="top-headline">МОСКВА:</h4>
 
 						<div class="expandeble">
 							<h4 class="headline">Все</h4>
