--- a/news-item.html
+++ b/news-item.html
@@ -248,7 +248,7 @@
 				</div>
 
 				<div class="button-holder">
-					<a href="#" class="link">ALL NEWS</a>
+					<a href="#" class="link">ALL ARTICLES</a>
 				</div>
 			</section>
 
