правки буклета, страницы новости и автора

--- a/author.html
+++ b/author.html
@@ -509,6 +509,9 @@
 		<!-- MAINJS -->
 		<script src="assets/js/main.js"></script>
 
+		<!-- SLICK -->
+		<script src="assets/js/slick/slick.js"></script>
+
 		<!-- Scrollspy -->
 		<script src="assets/js/scrollspy.js"></script>
 
