Доработки project.html

--- a/project.html
+++ b/project.html
@@ -92,8 +92,12 @@
 		<section id="b-banner" class="project-banner">
 			<div class="mask-content">
 				<div class="title">CONJURED LIFE</div>
-				<!-- <div class="text">by Uldus Bakhtiozina, Александр Дашевский, Анатолий Павлович Белкин, Арт группа "МЫЛО", Влад Кульков, Денис Патракеев, Иван Плющ, Игорь Шуклин, Илья Гришаев, Ирина Дрозд, Максим Свищёв, Марья Дмитриева, Наталья Першина Якиманская, Петр Швецов, Ростан Тавасиев, Сергей Шеховцов, Стас Багс, Хаим Сокол, Юрий Александров</div> -->
-				<div class="text">by <a href="#">Uldus Bakhtiozina</a></div>
+				<div class="text large">by Uldus Bakhtiozina, Александр Дашевский, Анатолий Павлович Белкин, Арт группа "МЫЛО", Влад Кульков, Денис Патракеев, Иван Плющ, Игорь Шуклин, Илья Гришаев, Ирина Дрозд, Максим Свищёв, Марья Дмитриева, Наталья Першина Якиманская, Петр Швецов, Ростан Тавасиев, Сергей Шеховцов, Стас Багс, Хаим Сокол, Юрий Александров</div>
+				<div class="text xlarge">by <a href="#">Uldus Bakhtiozina</a></div>
+				<div class="text large">
+					<span class="date-item">Photo and video art</span>
+					<span class="date-item">27.09.17 - 26.10.18</span>
+				</div>
 			</div>
 		</section>
 
@@ -102,21 +106,29 @@
 
 			<a id="an-backtotop" class="an-backtotop" onclick="$('#top').animatescroll();"></a>
 
-		</div>
+<!-- TITLE -->
+			<section class="b-project-title">
+				<div class="title">Conjured life</div>
+				<div class="subtitle">by <a href="#">ULDUZ BAKHTIOZINA</a></div>
+				<div class="date-item">Photo and video art</div>
+				<div class="date-item">27.09.17 - 26.10.18</div>
+			</section>
 
-		<div id="main" class="container">
 <!-- ABOUT -->
 			<section id="about" class="b-project-about">
 				<div class="title">«Anna Nova Gallery presents Conjured Life, the new project by Uldus Bakhtiozina, the art photographer.»</div>
 				<div class="columns">
 					<p>Проект «Цирк 17» — это новый взгляд как на события февральской и октябрьской революций в Российской Империи 1917 года, так и на политику в целом.</p>
 					<p>Используя техники классической греческой трагедии, ретроспективы и визионерского искусства, Юлдус Бахтиозина рассматривает революцию как традиционное представление цирка начала XX века, в котором действующие лица – артисты на арене – собирательный метафорический образ главных идеологов и участников революции.</p>
-					<p>Через знакомство аудитории с артистами приходит осознание, что история — повторяющаяся спираль, где грань между прошлым и настоящим медленно стирается, и происходит открытие: зрители все те же. Именно они являются основой представления, и они никогда не меняются. Самопознание устроено не для героев представления, но для зрителей, направлено на то, чтобы люди задавали вопросы и не поддавались пропаганде и агитации противоположных лагерей, но обладали самобытностью и волей к правде, решительностью</p>
-					<p>Партнёры выставки - компания Motul, марка воды Saint P, цветочное место Joy и винный бар Vinovniki (ул. Восстания, 20).</p>
-					<p>Стоимость посещения - 200 руб.</p>
-					<p>Приобретайте билеты на сайте TimePad.</p>
-					<p>P.S. Также билет на экспозицию предоставляет скидку 10% на любую покупку в киоске галереи и на сайте 28bugs.com.</p>
-					<p>Просто предъявите свой билет при покупке и получите скидку на произведения искусства, книги и аксессуры.</p>
+					<div class="expander">
+						<p>Через знакомство аудитории с артистами приходит осознание, что история — повторяющаяся спираль, где грань между прошлым и настоящим медленно стирается, и происходит открытие: зрители все те же. Именно они являются основой представления, и они никогда не меняются. Самопознание устроено не для героев представления, но для зрителей, направлено на то, чтобы люди задавали вопросы и не поддавались пропаганде и агитации противоположных лагерей, но обладали самобытностью и волей к правде, решительностью</p>
+						<p>Партнёры выставки - компания Motul, марка воды Saint P, цветочное место Joy и винный бар Vinovniki (ул. Восстания, 20).</p>
+						<p>Стоимость посещения - 200 руб.</p>
+						<p>Приобретайте билеты на сайте TimePad.</p>
+						<p>P.S. Также билет на экспозицию предоставляет скидку 10% на любую покупку в киоске галереи и на сайте 28bugs.com.</p>
+						<p>Просто предъявите свой билет при покупке и получите скидку на произведения искусства, книги и аксессуры.</p>
+					</div>
+					<a class="button special open">READ MORE</a>
 				</div>
 			</section>
 
