--- a/project.html
+++ b/project.html
@@ -196,29 +196,31 @@
 		</div>
 
 <!-- GALERY -->
-		<div class="tipical-gallery">
-			<div class="item">
-				<div class="holder">
-					<img src="images/project/bg2.jpg">
-					<div class="name">Anna Nova Gallery<br>II floor</div>
+		<section id="exposition">
+			<div class="tipical-gallery">
+				<div class="item">
+					<div class="holder">
+						<img src="images/project/bg2.jpg">
+						<div class="name">Anna Nova Gallery<br>II floor</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="holder">
+						<img src="images/project/bg2.jpg">
+						<div class="name">Anna Nova Gallery<br>II floor</div>
+					</div>
+				</div>
+				<div class="item">
+					<div class="holder">
+						<img src="images/project/bg2.jpg">
+						<div class="name">Anna Nova Gallery<br>II floor</div>
+					</div>
 				</div>
 			</div>
-			<div class="item">
-				<div class="holder">
-					<img src="images/project/bg2.jpg">
-					<div class="name">Anna Nova Gallery<br>II floor</div>
-				</div>
-			</div>
-			<div class="item">
-				<div class="holder">
-					<img src="images/project/bg2.jpg">
-					<div class="name">Anna Nova Gallery<br>II floor</div>
-				</div>
-			</div>
-		</div>
+		</section>
 
 <!-- PROJECTS -->
-		<section class="b-projects" id="exposition">
+		<section class="b-projects">
 			<div class="project-item">
 				<div class="mobile-headline">
 					<div class="name">More projects by<br><a href="#">ULDUZ BAKHTIOZINA</a></div>
